# rutherford-mcp-server

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.antigravitycli/: fe7f0c22-6469-4d7b-892c-c674892a259a.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
docs/: adding-a-cli.md  adding-an-agent.md  architecture.md  bedrock.md  cli-maintenance.md  configuration.md  integration-testing.md  local-models.md  mcp-client-integration.md  recipes.md  security.md  troubleshooting.md
docs/images/: README.md
scripts/: check_license_headers.py  check_per_file_coverage.py  update-clis.ps1  update-clis.sh
src/rutherford/: __init__.py  __main__.py  context.py  server.py
src/rutherford/acp/: __init__.py  adapters.py  client.py  conformance.py  cooldown.py  descriptors.py  discovery.py  effort.py  failures.py  host_env.py  journal.py  launch.py  local_detect.py  permission.py  registry.py  roster.py  sandbox.py  session.py  teardown.py
src/rutherford/adapters/: __init__.py  amp.py  antigravity.py  base.py  claude_code.py  cline.py  cn.py  codex.py  copilot.py  cursor.py  droid.py  generic.py  goose.py  hermes.py  junie.py  kilo.py  kimi.py  kiro.py  lmstudio.py  ollama.py  opencode.py  openhands.py  parsing.py  pi.py  provenance.py  qwen.py  registry.py  results.py  vibe.py
src/rutherford/config/: __init__.py  acp_json.py  loader.py  locations.py  panels.py  schema.py  trust.py
src/rutherford/domain/: __init__.py  enums.py  error_codes.py  errors.py  models.py
src/rutherford/io/: __init__.py  jsontext.py  ledger.py  serialize.py
src/rutherford/roles/: __init__.py  architect.md  codereviewer.md  debugger.md  explainer.md  planner.md  principal-reviewer.md  security-reviewer.md  security.md
src/rutherford/runtime/: __init__.py  cooldown.py  depth.py  failures.py  launch.py  logging.py  paths.py  platform.py  probe.py  probe_cache.py  process.py
src/rutherford/services/: __init__.py  analysis.py  consensus.py  debate.py  delegation.py  jobs.py  persistence.py  probing.py  roles.py  setup.py  strategies.py
src/rutherford/tools/: __init__.py  activity.py  analyze.py  capabilities.py  common.py  consensus.py  continue_job.py  debate.py  delegate.py  discover.py  jobs.py  panels.py  plan.py  probing.py  review.py  roles.py  setup.py
tests/: __init__.py  conftest.py  fake_acp_agent.py  fakes.py  test_acp_json.py  test_acp_unit.py  test_activity_tool.py  test_adapters.py  test_amp_adapter.py  test_analysis.py  test_antigravity_adapter.py  test_build_registry.py  test_claude_adapter.py  test_cline_adapter.py  test_cn_adapter.py  test_codex_adapter.py  test_common.py  test_config.py  test_conformance.py  test_consensus.py  test_continue.py  test_contract.py  test_cooldown.py  test_copilot_adapter.py  test_cursor_adapter.py  test_debate.py  test_delegation.py  test_delegation_persistence.py  test_depth.py  test_discover.py  test_domain.py  test_droid_adapter.py  test_effort.py  test_failures.py  test_fallback.py  test_generic_adapter.py  test_goose_adapter.py  test_hermes_adapter.py  test_host_env.py  test_inspect_tools.py  (+46 more)
tests/integration/: __init__.py  conftest.py  helpers.py  test_cursor_model_routing.py  test_goose.py  test_grok.py  test_local_backends.py  test_real_clis.py
tests/parsers/amp/: error.jsonl  success.jsonl
tests/parsers/claude_code/: error_max_turns.json  nonzero_stderr.txt  success.json
tests/parsers/cline/: error.jsonl  success.jsonl
tests/parsers/cn/: error.txt
tests/parsers/codex/: success.jsonl  transient_error_retry.jsonl  turn_failed.jsonl
tests/parsers/copilot/: error.jsonl  success.jsonl
tests/parsers/cursor/: error.json  success.json
tests/parsers/droid/: error.json  success.json
tests/parsers/goose/: error.txt
tests/parsers/hermes/: error.txt
tests/parsers/junie/: error.txt  success.json
tests/parsers/kilo/: error.jsonl  success.jsonl
tests/parsers/kimi/: error.jsonl  success.jsonl
tests/parsers/kiro/: list_models.json  success.txt
tests/parsers/opencode/: error.jsonl  success.jsonl
tests/parsers/openhands/: error.txt  success.jsonl
(+6 files in other folders)
